--- a/.github/workflows/manual-dependabot.yml
+++ b/.github/workflows/manual-dependabot.yml
@@ -138,31 +138,47 @@ jobs:
               --label "python" \
               --base main
 
-            # Enable auto-merge and monitor checks
+            # Monitor checks and enable auto-merge only after success
             echo "Looking for PR number..."
             pr_number=$(gh pr list --json number,headRefName --jq '.[] | select(.headRefName == "deps/update-python") | .number')
             if [ ! -z "$pr_number" ]; then
               echo "Found PR #$pr_number"
-              echo "Enabling auto-merge..."
-              gh pr merge "$pr_number" --auto --merge || true
               
               # Wait for checks and monitor status
               echo "Waiting for checks to complete..."
               for i in {1..30}; do
                 echo "Checking PR status (attempt $i/30)..."
-                check_status=$(gh pr view "$pr_number" --json statusCheckRollup --jq '.statusCheckRollup[] | select(.name != null) | .conclusion')
-                echo "Current check status: $check_status"
-                if echo "$check_status" | grep -q "failure\|cancelled"; then
-                  echo "❌ Checks have failed"
+                # Get all check conclusions
+                check_conclusions=$(gh pr view "$pr_number" --json statusCheckRollup --jq '.statusCheckRollup[].conclusion')
+                echo "Current check conclusions: $check_conclusions"
+                
+                # Count total checks and completed checks
+                total_checks=$(echo "$check_conclusions" | wc -l)
+                completed_checks=$(echo "$check_conclusions" | grep -v '^$' | wc -l)
+                failed_checks=$(echo "$check_conclusions" | grep -c "failure\|cancelled" || true)
+                
+                echo "Total checks: $total_checks"
+                echo "Completed checks: $completed_checks"
+                echo "Failed checks: $failed_checks"
+                
+                if [ "$failed_checks" -gt 0 ]; then
+                  echo "❌ Some checks have failed"
                   gh pr edit "$pr_number" --add-label "checks-failed"
                   gh pr comment "$pr_number" --body "⚠️ Checks have failed for this PR. Please review the failures and update accordingly."
                   exit 1
-                elif echo "$check_status" | grep -q "success"; then
-                  echo "✅ All checks passed successfully!"
-                  break
+                elif [ "$total_checks" -eq "$completed_checks" ]; then
+                  if [ "$failed_checks" -eq 0 ]; then
+                    echo "✅ All checks have passed successfully!"
+                    echo "Enabling auto-merge..."
+                    gh pr merge "$pr_number" --auto --merge || true
+                    break
+                  fi
                 fi
-                echo "Checks still running... waiting 10 seconds"
-                sleep 10
+                
+                if [ "$completed_checks" -lt "$total_checks" ]; then
+                  echo "Checks still running... ($completed_checks/$total_checks complete)"
+                  sleep 10
+                fi
               done
             else
               echo "❌ Could not find PR number"
@@ -258,31 +274,47 @@ jobs:
             fi
           fi
 
-          # Enable auto-merge and monitor checks
+          # Monitor checks and enable auto-merge only after success
           echo "Looking for PR number..."
           pr_number=$(gh pr list --json number,headRefName --jq '.[] | select(.headRefName == "deps/update-actions") | .number')
           if [ ! -z "$pr_number" ]; then
             echo "Found PR #$pr_number"
-            echo "Enabling auto-merge..."
-            gh pr merge "$pr_number" --auto --merge || true
             
             # Wait for checks and monitor status
             echo "Waiting for checks to complete..."
             for i in {1..30}; do
               echo "Checking PR status (attempt $i/30)..."
-              check_status=$(gh pr view "$pr_number" --json statusCheckRollup --jq '.statusCheckRollup[] | select(.name != null) | .conclusion')
-              echo "Current check status: $check_status"
-              if echo "$check_status" | grep -q "failure\|cancelled"; then
-                echo "❌ Checks have failed"
+              # Get all check conclusions
+              check_conclusions=$(gh pr view "$pr_number" --json statusCheckRollup --jq '.statusCheckRollup[].conclusion')
+              echo "Current check conclusions: $check_conclusions"
+              
+              # Count total checks and completed checks
+              total_checks=$(echo "$check_conclusions" | wc -l)
+              completed_checks=$(echo "$check_conclusions" | grep -v '^$' | wc -l)
+              failed_checks=$(echo "$check_conclusions" | grep -c "failure\|cancelled" || true)
+              
+              echo "Total checks: $total_checks"
+              echo "Completed checks: $completed_checks"
+              echo "Failed checks: $failed_checks"
+              
+              if [ "$failed_checks" -gt 0 ]; then
+                echo "❌ Some checks have failed"
                 gh pr edit "$pr_number" --add-label "checks-failed"
                 gh pr comment "$pr_number" --body "⚠️ Checks have failed for this PR. Please review the failures and update accordingly."
                 exit 1
-              elif echo "$check_status" | grep -q "success"; then
-                echo "✅ All checks passed successfully!"
-                break
+              elif [ "$total_checks" -eq "$completed_checks" ]; then
+                if [ "$failed_checks" -eq 0 ]; then
+                  echo "✅ All checks have passed successfully!"
+                  echo "Enabling auto-merge..."
+                  gh pr merge "$pr_number" --auto --merge || true
+                  break
+                fi
               fi
-              echo "Checks still running... waiting 10 seconds"
-              sleep 10
+              
+              if [ "$completed_checks" -lt "$total_checks" ]; then
+                echo "Checks still running... ($completed_checks/$total_checks complete)"
+                sleep 10
+              fi
             done
           else
             echo "❌ Could not find PR number"
